--- a/app/src/main/res/layout/comment_card.xml
+++ b/app/src/main/res/layout/comment_card.xml
@@ -14,10 +14,9 @@
             android:id="@+id/circleImageViewCommentUser"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginLeft="50dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:paddingLeft="20dp"
             android:src="@drawable/baseline_account_circle_24"
             app:layout_constraintEnd_toStartOf="@+id/commentUserName"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,11 +26,9 @@
             android:id="@+id/commentUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="11dp"
-            android:layout_marginEnd="283dp"
+            android:layout_marginLeft="10dp"
             android:text="TextView"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/circleImageViewCommentUser"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,7 +39,8 @@
             android:layout_marginBottom="2dp"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="@+id/circleImageViewCommentUser"
-            app:layout_constraintStart_toStartOf="@+id/commentUserName" />
+            app:layout_constraintStart_toStartOf="@+id/commentUserName"
+            app:layout_constraintTop_toBottomOf="@+id/commentUserName" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
